--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
       a {
         color : red;
       }
+      .bio-box {
+        border: 1px solid black;
+      }
+      .bio-box a {
+        color: green;
+      }
       div {
         border: 1px solid black;
+      }
+      div a {
+        color : green;
+      }
+      #exec-bio {
+        background-color: lightgrey;
+      }
+      #home-link {
+        background-color: orange;
+      }
+      .tab-class {
+        background-color: azure;
       }
     </style>
   </head>
@@ -16,7 +34,7 @@
     <h1>I'm an h1</h1>
     <ul>
       <li>
-        <a href="http://example.com/" >Link</a>
+        <a id = "home-link" href="http://example.com/" >Link</a>
       </li>
       <li>
         <a href="http://example.com/" >Link</a>
@@ -26,17 +44,17 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div>
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div id ="exec-bio" class="bio-box tab-class">
+      <a href="http://example.com/" >I'm a link</a>
     </div>
-    <div>
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box tab-class">
+      <a href="http://example.com/" >I'm a link</a>
     </div>
-    <div>
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box tab-class">
+      <a href="http://example.com/" >I'm a link</a>
     </div>
-    <div>
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class = "bio-box tab-class">
+      <a href="http://example.com/" >I'm a link</a>
     </div>
   </body>
 </html>
