Add additional style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       a {
         color : red;
       }
+      .alert {
+        background: red;
+      }
       .bio-box {
         border: 1px solid black;
       }
@@ -22,11 +25,8 @@
       #exec-bio {
         background-color: lightgrey;
       }
-      #home-link {
-        background-color: orange;
-      }
-      .tab-class {
-        background-color: azure;
+      #exec-bio {
+        background: red;
       }
     </style>
   </head>
@@ -44,16 +44,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id ="exec-bio" class="bio-box tab-class">
+    <div id ="exec-bio" class="bio-box alert">
       <a href="http://example.com/" >I'm a link</a>
     </div>
-    <div class="bio-box tab-class">
+    <div class="bio-box">
       <a href="http://example.com/" >I'm a link</a>
     </div>
-    <div class="bio-box tab-class">
+    <div class="bio-box">
       <a href="http://example.com/" >I'm a link</a>
     </div>
-    <div class = "bio-box tab-class">
+    <div class = "bio-box alert">
       <a href="http://example.com/" >I'm a link</a>
     </div>
   </body>
