Use style % to shrink box

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       .bio-box {
         border: 1px solid black;
       }
+      .bio-box {
+        width: 50%;
+      }
       .bio-box a {
         color: green;
       }
