Clean up styles and add comments

--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
     <style>
+      /* Global Styles */
       a {
         color: red;
       }
+
+      /* Social Styles */
+      .social-link {
+        color: blue;
+      }
+
+      /* Bio Styles */
       .bio-box {
         border: 1px solid black;
       }
       .bio-copy a {
         color: green;
-      }
-      .social-link {
-        color: blue;
       }
     </style>
   </head>
