--- a/index.html
+++ b/index.html
@@ -26,20 +26,52 @@
         display: inline-block;
         height: 36px;
       }
+      .social-list {
+      list-style: none;
+      padding: 0;
+      text-align: right;
+      }
+      .social-list > li {
+      display: inline-block;
+      }
 
       /* BIO STYLES */
       .bio-wrapper {
         font-size: 24px;
+        margin: 0 auto 20px;
+        max-width: 960px;
+        overflow: hidden;
       }
+      
+		.bio-wrapper:after {
+		  visibility: hidden;
+		  display: block;
+		  font-size: 0;
+		  content: " ";
+		  clear: both;
+		  height: 0;
+		}
+		
       .bio-box {
         border: 1px solid black;
+        box-sizing: border-box;
         float: left;
         font-size: 1rem;
+        margin: 40px 1% 0;
         padding: 2%;
-        width: 25%;
+        width: 23%;
+      }
+      .bio-box > a {
+      color: #c68bf9;
       }
       .bio-box h3 {
-        font-size: 1.5em;
+      	color: #fff;
+      	font-size: 1.5em;
+      	margin: -40px 0 1em;
+      	text-align: center;
+      }
+      .bio-box img {
+	      width: 100%
       }
       .bio-copy {
         font-size: 1em;
@@ -52,21 +84,22 @@
   <body>
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
-      <ul>
+      <ul class="social-list">
         <li>
-          <a href="http://example.com/" class="social-link">Link</a>
+          <a href="http://example.com/" class="social-link">Link1</a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Link</a>
+          <a href="http://example.com/" class="social-link">Link2</a>
         </li>
         <li>
-          <a href="http://example.com/" class="social-link">Link</a>
+          <a href="http://example.com/" class="social-link">Link3</a>
         </li>
       </ul>
     </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
+      	<img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="http://twitter.com/mhartl" class="social-link">here</a>
         <div class="bio-copy">
@@ -86,6 +119,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
         <div class="bio-copy">
@@ -98,6 +132,7 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
         <div class="bio-copy">
@@ -110,11 +145,39 @@
         </div>
       </div>
       <div class="bio-box">
+        <img src="http://placekitten.com/g/400/400">
         <h3>??</h3>
         <p>
           The Future
         </p>
       </div>
     </div>
+    <p>
+    Learn Enough to Be Dangerous is a leader in the movement to teach the
+    world <em>technical sophistication</em>, which includes both "hard
+    skills" like coding, command lines, and version control, and "soft
+     skills" like guessing keyboard shortcuts, Googling error messages, and
+    knowing when to just reboot the darn thing.
+  </p>
+  <p>
+    We believe there are <strong>at least a billion people</strong> who can
+    benefit from learning technical sophistication, probably more. To join
+    our movement,
+    <a href="https://learnenough.com/#email_list">sign up for our official
+    email list</a> now.
+  </p>
+  <h3>Background</h3>
+  <p>
+    Learn Enough to Be Dangerous is an outgrowth of the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
+    <a href="http://www.softcover.io/">Softcover publishing platform</a>.
+    This page is part of the sample site for
+    <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and
+    Layout to Be Dangerous</em></a>, which teaches the basics of
+    <strong>C</strong>ascading <strong>S</strong>tyle
+    <strong>S</strong>heets, the language that allows web pages to be styled.
+    Other related tutorials can be found at
+    <a href="https://learnenough.com/">learnenough.com</a>.
+  </p>
   </body>
 </html>
