--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
@@ -38,7 +38,7 @@
       /* BIO STYLES */
       .bio-wrapper {
         font-size: 24px;
-        margin: 0 auto 20px;
+        margin: auto;
         max-width: 960px;
         overflow: hidden;
       }
@@ -99,7 +99,7 @@
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
-      	<img src="http://placekitten.com/g/400/400">
+      	<img src="http://placekitten.com/g/400/400" alt="kitten picture">
         <h3>Michael Hartl</h3>
         <a href="http://twitter.com/mhartl" class="social-link">here</a>
         <div class="bio-copy">
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
+        <img src="http://placekitten.com/g/400/400" alt="kitten picture">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
         <div class="bio-copy">
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
+        <img src="http://placekitten.com/g/400/400" alt="kitten picture">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
         <div class="bio-copy">
@@ -145,7 +145,7 @@
         </div>
       </div>
       <div class="bio-box">
-        <img src="http://placekitten.com/g/400/400">
+        <img src="http://placekitten.com/g/400/400" alt="kitten picture">
         <h3>??</h3>
         <p>
           The Future
